--- a/lib/generators/time_will_tell/templates/config/locales/time_will_tell.en.yml
+++ b/lib/generators/time_will_tell/templates/config/locales/time_will_tell.en.yml
@@ -7,12 +7,17 @@ en:
       same_date: "%{month} %{from_day}, %{year}"
 
     distance_in_words:
-      second: second
-      minute: minute
-      hour: hour
-      day: day
-      month: month
-      year: year
-      half_an_hour: half an hour
-      and_a_half: and a half
-      and: and
+      template: "%{count} %{unit}"
+      template_long: "%{rest} and %{last}"
+
+      units:
+        second: second
+        minute: minute
+        hour: hour
+        day: day
+        month: month
+        year: year
+
+      special:
+        half_an_hour: half an hour
+        and_a_half: and a half
