--- a/lib/generators/time_will_tell/install/templates/config/locales/time_will_tell.en.yml
+++ b/lib/generators/time_will_tell/install/templates/config/locales/time_will_tell.en.yml
@@ -1,10 +1,11 @@
 en:
   time_will_tell:
     date_range:
-      different_months_same_year: "%{from_month} %{from_day} %{sep} %{to_month} %{to_day}, %{year}"
+      different_months_same_year: "%{from_month} %{from_day} %{sep} %{to_month} %{to_day}"
       different_years: "%{from_month} %{from_day}, %{from_year} %{sep} %{to_month} %{to_day}, %{to_year}"
-      same_month: "%{month} %{from_day} %{sep} %{to_day}, %{year}"
-      same_date: "%{month} %{from_day}, %{year}"
+      same_month: "%{month} %{from_day} %{sep} %{to_day}"
+      same_date: "%{month} %{from_day}"
+      with_year: "%{date_range}, %{year}"
 
     distance_in_words:
       template: "%{count} %{unit}"
